<resources>
    <string name="app_name">l024446_g173341_aula11</string>
    <string name="action_settings">Settings</string>
    <string name="hintParametro1">Parâmetro 1</string>
    <string name="hintParametro2">Parâmetro2</string>
    <string name="botaoCep">Cep</string>
    <string name="botaoMap">Maps</string>
    <string name="botaoRoute">Route</string>
    <string name="botaoXML">XML</string>
    <string name="botaoAccuWheather">AccuW</string>
</resources>
