<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.unicamp.ft.l024446_g173341_aula11.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:maxLines = "1000"
        android:scrollbars = "vertical"
        />

    <EditText
        android:id="@+id/editInfo1"
        android:hint="@string/hintParametro1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <EditText
        android:id="@+id/editInfo2"
        android:hint="@string/hintParametro2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button style="attr/buttonBarButtonStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/botaoCep"
            android:onClick="onViaCep"
            />

        <Button style="attr/buttonBarButtonStyle"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/botaoMap"
            android:onClick="onGMaps"
            />
        <Button style="attr/buttonBarButtonStyle"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/botaoRoute"
            android:onClick="onGRoutes"
            />
        <Button style="attr/buttonBarButtonStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/botaoXML"
            android:onClick="onXML"
            />
        <Button style="attr/buttonBarButtonStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/botaoAccuWheather"
            android:onClick="onAccuWheather"
            />

    </LinearLayout>
</LinearLayout>
